Style: use overflow hidden to prevent page from being scrolled (#59)

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -5,6 +5,7 @@
 html {
     box-sizing: border-box;
     background: rgba($color: $color-white, $alpha: 0.8);
+    overflow: hidden;
 }
 
 *,
